--- a/project/icore/WebContent/css/screen.css
+++ b/project/icore/WebContent/css/screen.css
@@ -70,25 +70,66 @@ body {
     height:100%;
 }
 
-.header {
+
+header {
+    position: fixed;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    top: 0;
+    width: 100%;
+    height: 50px;
+    background-color: #303030;
+    border-color: #303030;
+    font-family: Ubuntu;
+    font-weight: lighter;
+    font-size: 24px;
+    line-height: 0;
+    z-index: 6;
+}
+
+
+.footer {
+    position: fixed;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
     background-color: #303030;
     border-color: #303030;
     color: #f2edee;
-    height: 50px;
-    text-align: center;
+    font-family: Ubuntu;
+    font-size: 15px;
+    font-weight: lighter;
+    line-height: 20px;
+    z-index: 6;
 }
 
 .intro{
+    position: relative;
+    margin: auto;
+    top:80px;
+    width: 50%;
     text-align: justify;
     font-family: Ubuntu;
     font-weight: lighter;
-    font-size: 18px;
-    width: 36em;
-    position: relative;
-    top: 5%;
-    left: 33%;
-
+    font-size: 16px;
 }
+
+.get_started{
+    position: relative;
+    margin: auto;
+    top: 80px;
+    width: 50%;
+    text-align: justify;
+    font-family: Ubuntu;
+    font-weight: lighter;
+    font-size: 16px;
+    z-index: 4;
+}
+
 
 .box {
     display: grid;
@@ -140,18 +181,6 @@ hr {
     background-color:#fff;
     height:1px;
     width:100%;
-}
-
-.footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    text-align: center;
-    background-color: #303030;
-    border-color: #303030;
-    color: #f2edee;
-    height: 100px;
 }
 
 .wrapper {
@@ -248,3 +277,21 @@ li{
     margin: 10px 0;
     font-size: 15px;
 }
+
+table {
+    border-collapse: collapse;
+    border: 2px black solid;
+    font: 12px sans-serif;
+    width: 100%;
+    bottom: 50px;
+}
+
+td {
+    border: 1px black solid;
+    padding: 5px;
+}
+
+* {box-sizing: border-box;}
+body {font-family: Verdana, sans-serif;}
+.mySlides {display: none;}
+img {vertical-align: middle;}
