--- a/icoreangulardash/src/app/modules/world-map/world-map.component.html
+++ b/icoreangulardash/src/app/modules/world-map/world-map.component.html
@@ -1,19 +1,44 @@
 <div>
+
   <h2> World Events Monitor </h2>
   <p> Serving events data from last week </p>
+
 </div>
 
-<div style="text-align: center">
+<div style="text-align: left">
   <body>
     <div class="first">
-      <span id="world">
+      <mat-card class="mapBox">
+        <div id="world">
 
-      </span>
+        </div>
+      </mat-card>
 
-      <span id="line">
+      <mat-card>
+        <div id="number">
 
-      </span>
+        </div>
+      </mat-card>
 
     </div>
+    <br>
+    <br>
+    <h3> Media Tone </h3>
+    <p> Serving global tone from last week </p>
+    <br>
+
+    <div class="second">
+      <mat-card>
+        <div id="line" style="text-align: left">
+
+        </div>
+      </mat-card>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+
+
   </body>
 </div>
