initialized afp_test_5 file commit

--- a/icoreangulardash/src/app/modules/dashboard/dashboard.component.html
+++ b/icoreangulardash/src/app/modules/dashboard/dashboard.component.html
@@ -26,7 +26,7 @@
       <mat-form-field>
         <mat-label>Month</mat-label>
         <mat-hint>e.g,  01-03</mat-hint>
-        <input matInput #month ="ngModel" required name = "month" [(ngModel)]="userModel.month">
+        <input matInput #month ="ngModel" name = "month" [(ngModel)]="userModel.month">
       </mat-form-field>
       </mat-grid-tile>
 
