sqlContext generated fresh at each gkg GET request

--- a/icoreangulardash/src/app/modules/home/home.component.html
+++ b/icoreangulardash/src/app/modules/home/home.component.html
@@ -1,22 +1,30 @@
 
-<div class="zeroth">
-  <div>
-    <br>
-    <h3 style='text-align: center; font-size: 25px; padding-left: 10%; padding-right: 10%; font-family: Ubuntu;'>About iCoRe</h3>
+<div class="container">
+  <div class="zeroth">
+    <div>
+      <br>
+      <h3 style='text-align: center; font-size: 25px; padding-left: 10%; padding-right: 10%; font-family: Ubuntu;'>About iCoRe</h3>
+    </div>
+    <div>
+      <br>
+      <h3 style='text-align: center; font-size: 25px; padding-left: 10%; padding-right: 10%; font-family: Ubuntu;'>Contributions</h3>
+    </div>
   </div>
-  <div>
-    <br>
-    <h3 style='text-align: center; font-size: 25px; padding-left: 10%; padding-right: 10%; font-family: Ubuntu;'>Contributions</h3>
+
+  <div class="first">
+    <span>
+      <p style="text-align: center; font-size: 25px; padding-left: 10%; padding-right: 10%; font-family: Ubuntu;"> This project introduces the interface for Communication Research (iCoRe) to access, explore, and analyze the <a href="https://www.gdeltproject.org/" target="_blank" style="color:#ff7f7f;text-decoration:none">Global Database of Events, Language and Tone</a> (GDELT; Leetaru & Schrodt, 2013). GDELT provides a vast, open source, and constantly updated repository of online news and event metadata collected from tens of thousands of news outlets around the world. <br><br> Despite GDELT’s promise for advancing communication science, its massive scale and complex data structures have hindered efforts of communication scholars aiming to access and analyze GDELT. We thus developed iCoRe, an easy-to-use web interface that (a) provides fast access to the data available in GDELT (b) shapes and processes GDELT for theory-driven applications within communication research and (c) enables replicability through transparent query and analysis protocols.</p>
+    </span>
+
+    <span>
+      <p style="text-align: center; font-size: 25px; padding-left: 15%; padding-right: 15%; font-family: Ubuntu;"> iCoRe is open-source and under active development and seeking interested contributors. If you experience technical issues, you can either open an issue on <a href="https://github.com/medianeuroscience/icore" style="color:#ff7f7f;text-decoration:none"> Github</a> or send us an <a href="mailto:fhopp@ucsb.edu" style="color:#ff7f7f;text-decoration:none"> email</a>. Please also let us know what features you would like to see on iCoRe in the future.<br> <br> <br> When using iCoRe, please consider citing this article: Hopp, F. R., Schaffer, J., Fisher, J. T., & Weber, R. (2019). iCoRe: The GDELT interface for the advancement of communication research. <i>Computational Communication Research</i>.</p>
+    </span>
+
   </div>
-</div>
 
-<div class="first">
-  <span>
-    <p style="text-align: center; font-size: 25px; padding-left: 10%; padding-right: 10%; font-family: Ubuntu;"> This project introduces the interface for Communication Research (iCoRe) to access, explore, and analyze the <a href="https://www.gdeltproject.org/" target="_blank" style="color:#ff7f7f;text-decoration:none">Global Database of Events, Language and Tone</a> (GDELT; Leetaru & Schrodt, 2013). GDELT provides a vast, open source, and constantly updated repository of online news and event metadata collected from tens of thousands of news outlets around the world. <br><br> Despite GDELT’s promise for advancing communication science, its massive scale and complex data structures have hindered efforts of communication scholars aiming to access and analyze GDELT. We thus developed iCoRe, an easy-to-use web interface that (a) provides fast access to the data available in GDELT (b) shapes and processes GDELT for theory-driven applications within communication research and (c) enables replicability through transparent query and analysis protocols.</p>
-  </span>
-
-  <span>
-    <p style="text-align: center; font-size: 25px; padding-left: 15%; padding-right: 15%; font-family: Ubuntu;"> iCoRe is open-source and under active development and seeking interested contributors. If you experience technical issues, you can either open an issue on <a href="https://github.com/medianeuroscience/icore" style="color:#ff7f7f;text-decoration:none"> Github</a> or send us an <a href="mailto:fhopp@ucsb.edu" style="color:#ff7f7f;text-decoration:none"> email</a>. Please also let us know what features you would like to see on iCoRe in the future.<br> <br> <br> When using iCoRe, please consider citing this article: Hopp, F. R., Schaffer, J., Fisher, J. T., & Weber, R. (2019). iCoRe: The GDELT interface for the advancement of communication research. <i>Computational Communication Research</i>.</p>
-  </span>
+    <br>
+    <br>
+    <br>
+    <br>
 
 </div>
