--- a/icoreangulardash/src/app/modules/home/home.component.css
+++ b/icoreangulardash/src/app/modules/home/home.component.css
@@ -9,3 +9,7 @@
     grid-template-columns: auto auto;
     grid-template-rows: auto;
 }
+
+.container2  {
+  background-image: url('src/assets/background_art.jpg');
+}
